plugins {
    id 'java'
    id 'application'
    id 'me.champeau.gradle.jmh' version '0.5.0'
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

compileJava {
    options.compilerArgs += ['--add-modules', 'jdk.incubator.vector']
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(16)
    }

}

application {
    mainClass = 'examples.Vectorization'
//    applicationDefaultJvmArgs = ['-XX:+UnlockDiagnosticVMOptions', '-XX:+PrintAssembly', '-XX:-UseSuperWord', '--add-modules', 'jdk.incubator.vector']
    applicationDefaultJvmArgs = [
            '-XX:+UnlockDiagnosticVMOptions',
//            '-XX:+PrintAssembly',
            '-XX:CompileCommand=print,examples/Vectorization.vectorComputationWithRemainder',
            '--add-modules', 'jdk.incubator.vector'
    ]
}

jmh {
    jvmArgs = ['--add-modules', 'jdk.incubator.vector']
}

dependencies {
    jmh group: 'org.openjdk.jmh',      name: 'jmh-core',         version: '1.26'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
